--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.6.7.jammy) jammy; urgency=low
+  * handling null timestamp in python handler result method
+
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 10 May 2025 14:00:00 +0200
+
 justniffer (0.6.6.jammy) jammy; urgency=low
   * compiled with python integration 
 
