--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.6.8-dev.2.jammy) jammy; urgency=low
+  * dev version
+
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 16 May 2025 14:00:00 +0200
+
 justniffer (0.6.7.jammy) jammy; urgency=low
   * handling null timestamp in python handler result method
 
