--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,4 +1,4 @@
-justniffer (0.6.8-dev.3.jammy) jammy; urgency=low
+justniffer (0.6.8-dev~3.bookworm) bookworm; urgency=low
   * dev version
 
  -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 16 May 2025 14:00:00 +0200
