--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,7 +1,7 @@
-justniffer (0.6.8-dev~3.bookworm) bookworm; urgency=low
-  * dev version
+justniffer (0.6.8.noble) noble; urgency=low
+  * default concurrent streams to 16384, libnids updates for new gcc version
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 16 May 2025 14:00:00 +0200
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 09 Jun 2025 22:20:00 +0200
 
 justniffer (0.6.7.jammy) jammy; urgency=low
   * handling null timestamp in python handler result method
