--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.6.9.jammy) jammy; urgency=low
+  * Fix idle.time.1 - Properly handle truncated connections.
+
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 11 Jun 2025 20:45:00 +0200
+
 justniffer (0.6.8.noble) noble; urgency=low
   * default concurrent streams to 16384, libnids updates for new gcc version
 
