--- a/main/debian/changelog
+++ b/main/debian/changelog
@@ -1,4 +1,4 @@
-justniffer (0.6.9.jammy) jammy; urgency=low
+justniffer (0.6.9.noble) noble; urgency=low
   * Fix idle.time.1 - Properly handle truncated connections.
 
  -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 11 Jun 2025 20:45:00 +0200
